@@ -77,9 +77,12 @@ typedef int (spank_f) (spank_t spank, int ac, char *argv[]);
  *               |          `-> task_exit ()
  *               `-> fini ()
  *
+ *   In srun only the init() and local_user_init() callbacks are used.
+ *
  */
 
 extern spank_f slurm_spank_init;
+extern spank_f slurm_spank_local_user_init;
 extern spank_f slurm_spank_user_init;
 extern spank_f slurm_spank_task_init;
 extern spank_f slurm_spank_task_post_fork;
@@ -189,6 +192,17 @@ extern struct spank_option spank_options [];
 BEGIN_C_DECLS
 
 /*
+ *  Determine whether a given spank plugin symbol is supported
+ *   in this version of SPANK interface.
+ *
+ *  Returns:
+ *  = 1   The symbol is supported
+ *  = 0   The symbol is not supported
+ *  = -1  Invalid argument
+ */
+int spank_symbol_supported (const char *symbol);
+
+/*
  *  Determine whether plugin is loaded "local" or "remote."
  * 
  *  Returns:
@@ -207,8 +221,9 @@ int spank_remote (spank_t spank);
  *   
  *  Returns ESPANK_SUCCESS on success, ESPANK_NOTASK if an S_TASK*
  *   item is requested from outside a task context, ESPANK_BAD_ARG
- *   if invalid args are passed to spank_get_item, and 
- *   ESPANK_NOT_REMOTE if not called from slurmd context.
+ *   if invalid args are passed to spank_get_item or spank_get_item
+ *   is called from an invalid context, and ESPANK_NOT_REMOTE 
+ *   if not called from slurmd context or spank_user_local_init.
  */
 spank_err_t spank_get_item (spank_t spank, spank_item_t item, ...);
 
